新增文字樣式

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>URBNSTEP｜品牌故事</title>
 </head>
 <body>
+    <div class="header">
+        <h1 class="h1 text-white">品牌故事<br /> <span class="">Brand Story</span></h1>
+    </div>
     <a href="#">連結</a>
 </body>
 </html>
