--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Step，代表著我們對每一個走進城市生活的人致敬。我們不追逐潮流，我們關注輪廓、材質、穿著者的心境與身型，創造能陪伴你走進自我節奏的經典之作。選用高品質麂皮、織物與天然橡膠大底，並與獨立插畫家、攝影師合作，打造具有街頭詩意的形象風格。URBNSTEP
                 相信，美不是炫耀，而是由內而外的呼吸——一雙鞋，剛好說出你心中的樣子。</p>
         </div>
-        <div>
+        <div class="pb-48 mb-48 section-lined">
             <h2 class="h4 mb-24">品牌歷程</h2>
             <ul class="history-list">
                 <li class="mb-12"><span class="pe-8">2019</span>
@@ -45,7 +45,24 @@
                 </li>
             </ul>
         </div>
+        <div class="section-lined pb-48 mb-48">
+            <h2 class="h4 mb-24">品牌理念</h2>
+            <ul>
+                <li class="mb-12 philosophy-item">機能先行：輕量、透氣、防潑水</li>
+                <li class="mb-12 philosophy-item">美學延伸：極簡線條 + 實驗配色</li>
+                <li class="mb-12 philosophy-item">永續材料：選用環保合成皮革與可回收包裝</li>
+            </ul>
+        </div>
+        <div ckass="pb-48 section-lined">
+            <h2 class="h4 mb-24">品牌小故事</h2>
+            <a href="#" class="py-8"><i class="bi bi-arrow-up-right"></i>創辦人筆記：我們為什麼想做鞋？</a>
+            <a href="#" class="py-8"><i class="bi bi-arrow-up-right"></i>穿上 URBNSTEP 的他們</a>
+            <a href="#" class="py-8"><i class="bi bi-arrow-up-right"></i>URBNSTEP 鞋履的誕生過程</a>
+        </div>
+    </div>
+    <div class="bg-neutral-100 py-64 text-sm text-neutral-600 footer">
+        <p class="mb-4">Copyright ©2025 URBNSTYLE</p>
+        <p>All Rights Reserved.</p>
     </div>
 </body>
-
 </html>
